# nocturne

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: config.toml
docs/: IDEAS.md  TODO.md  example_storage.toml  storage_method.md
include/: config.hpp  playlist.hpp  song.hpp  storage.hpp
src/: config.cpp  main.cpp  playlist.cpp  song.cpp  storage.cpp
